--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ color: #E0B612;
     margin-top: 20px;
     border-radius: 15px;
     padding: 5px 20px;
+    display: none;  /*newly added for vanishing success and failure*/
 }
 .notify-section{
     width: 35%;
